--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,8 @@ h1 {
 	background-color: #0082fc; /* Red */
 }
 
-/* Style for disabled #connectButton */
-#connectButton[disabled] {
+/* Style for disabled */
+.button[disabled] {
 	background-color: #dddddd; /* Light gray */
 	color: #aaaaaa; /* Dark gray */
 	cursor: not-allowed;
