--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h1 {
 #headingChange {
 	width: 100%;
 	text-align: center;
-	color: #000; /* Black text color */
+	color: #fff; /* Black text color */
 	font-size: 16px; /* Text size */
 }
 #gestureDiv {
