--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,12 @@ h1 {
 	border-radius: 8px;
 	font-family: "Roboto", sans-serif;
 }
+
+.logo {
+	max-width: 100vw; /* Adjust as needed */
+	margin-bottom: 20px; /* Adjust as needed */
+}
+
 /* Disconnect button style */
 #connectButton {
 	background-color: #0082fc; /* Blue */
