--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,10 @@ h1 {
 	background-color: #0082fc; /* Blue */
 }
 
+#dismissButton {
+	background-color: #ffffff; /* White */
+}
+
 /* Style for disabled */
 #connectButton[disabled] {
 	background-color: #dddddd; /* Light gray */
