--- a/styles.css
+++ b/styles.css
@@ -84,8 +84,14 @@ h1 {
 	color: black;
 	width: 60%; /* Adjust the width as needed */
 	position: absolute; /* Position absolute */
-	transform: translateX(-100%); /* Adjust to center horizontally */
-	bottom: 10; /* Align to the bottom */
+	box-sizing: border-box; /* Include padding and border in the width */
+
+	/* Center the button both horizontally and vertically */
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
 
 /* Style for disabled */
