--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ h1 {
 
 	/* Center the button both horizontally and vertically */
 	position: absolute;
-	bottom: 15;
+	bottom: 15px;
 	left: 0;
 	right: 0;
 	margin: auto;
