--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,16 @@ h1 {
 	width: 100vw;
 	position: relative;
 }
+
+.top-section,
+.bottom-section {
+	width: 100%;
+	height: 50%; /* Each section takes 50% of the height */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 #consoleOutput,
 #currentLocation {
 	width: 90%;
