--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ h1 {
 }
 
 .interact-button {
-	background-color: #008cba; /* Blue */
+	background-color: #4caf50; /* Blue */
 	color: white; /* Text color */
 	margin-left: 2%; /* Adjust spacing between buttons */
 	width: 45%; /* Adjusted width for each button */
