--- a/styles.css
+++ b/styles.css
@@ -195,9 +195,11 @@ input:checked + .slider:before {
 	transform: translateX(26px);
 }
 
-/* Label for the toggle */
-#toggleLabel {
-	margin-left: 10px;
+/* Labels for the toggle */
+#buroLabel,
+#hachiLabel {
+	margin: 0 10px;
 	font-size: 16px;
 	font-family: "Roboto", sans-serif;
+	color: white;
 }
