--- a/styles.css
+++ b/styles.css
@@ -196,8 +196,8 @@ input:checked + .slider:before {
 }
 
 /* Labels for the toggle */
-#buroLabel,
-#hachiLabel {
+#buroToggle,
+#hachiToggle {
 	margin: 0 10px;
 	font-size: 16px;
 	font-family: "Roboto", sans-serif;
