--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,9 @@ input:checked + .slider:before {
 /* Labels for the toggle */
 #buroToggle,
 #hachiToggle {
+	display: flex;
+	align-items: center; /* Center vertically */
+	justify-content: center; /* Center horizontally */
 	margin: 0 10px;
 	font-size: 16px;
 	font-family: "Roboto", sans-serif;
