--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ input:checked + .slider:before {
 	flex-direction: column; /* Stack items vertically */
 	text-align: center; /* Center text */
 	justify-content: center; /* Center horizontally */
-	margin: 0 10px;
+	margin: 10px;
 	font-size: 16px;
 	font-family: "Roboto", sans-serif;
 	color: white;
