--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ h1 {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: #ccc;
+	background-color: #0082fc;
 	transition: 0.4s;
 	border-radius: 34px;
 }
