--- a/pwd.css
+++ b/pwd.css
@@ -49,7 +49,6 @@ body {
 	gap: 20px;
 	max-width: 300px;
 	margin: 0 auto;
-	border: none;
 }
 
 .keypad button {
@@ -63,6 +62,8 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	outline: none;
+	border: none;
 }
 
 .keypad button.ok-button {
