--- a/styles.css
+++ b/styles.css
@@ -220,7 +220,7 @@ input:checked + .slider:before {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(255, 255, 255, 0.8); /* semi-transparent white background */
+	background-color: rgb(0, 0, 0);
 	display: flex;
 	justify-content: center;
 	align-items: center;
