--- a/styles.css
+++ b/styles.css
@@ -227,20 +227,8 @@ input:checked + .slider:before {
 	z-index: 9999; /* Ensure it's on top of everything else */
 }
 
-.loader {
-	border: 8px solid #f3f3f3; /* Light grey */
-	border-top: 8px solid #3498db; /* Blue */
-	border-radius: 50%;
-	width: 50px;
-	height: 50px;
-	animation: spin 1s linear infinite; /* CSS animation for spinning */
-}
-
-@keyframes spin {
-	0% {
-		transform: rotate(0deg);
-	}
-	100% {
-		transform: rotate(360deg);
-	}
+#loading-text {
+	font-weight: bold;
+	text-transform: uppercase;
+	color: #999da0;
 }
