--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ h1 {
 	left: 0;
 	width: 100vw;
 	height: 100vh;
+	max-height: 100vh;
 	background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
 	color: white;
 	font-size: 9vw; /* Very big text size */
