--- a/styles.css
+++ b/styles.css
@@ -234,3 +234,9 @@ input:checked + .slider:before {
 	text-transform: uppercase;
 	color: #ffffff;
 }
+
+.hearing-icon {
+	font-size: 36px; /* Set the size of the hearing icon */
+	color: blue; /* Set the color of the hearing icon */
+	vertical-align: middle; /* Align the icon */
+}
