--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ input:checked + .slider:before {
 }
 
 .hearing-icon {
-	font-size: 36px; /* Set the size of the hearing icon */
-	color: blue; /* Set the color of the hearing icon */
+	font-size: 50vh; /* Set the size of the hearing icon */
+	color: white; /* Set the color of the hearing icon */
 	vertical-align: middle; /* Align the icon */
 }
