--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,6 @@ input:checked + .slider:before {
 	text-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
 	padding-bottom: 20vh;
 	font-size: 20vh; /* Set the size of the hearing icon */
-	color: #4caf50; /* Set the color of the hearing icon */
 	vertical-align: middle; /* Align the icon */
 	animation: pulsate 6s infinite cubic-bezier(0.2, 0, 0, 1); /* Apply the pulsating animation */
 }
@@ -248,13 +247,16 @@ input:checked + .slider:before {
 	0% {
 		transform: scale(1); /* Normal size */
 		opacity: 0; /* Full opacity */
+		color: white; /* Set the color of the hearing icon */
 	}
 	50% {
 		transform: scale(1.4); /* 20% larger */
 		opacity: 1; /* Full opacity */
+		color: #4caf50; /* Set the color of the hearing icon */
 	}
 	100% {
 		transform: scale(1); /* Back to normal size */
 		opacity: 0; /* Full opacity */
+		color: white; /* Set the color of the hearing icon */
 	}
 }
