--- a/styles.css
+++ b/styles.css
@@ -247,16 +247,16 @@ input:checked + .slider:before {
 	0% {
 		transform: scale(1); /* Normal size */
 		opacity: 0; /* Full opacity */
-		color: white; /* Set the color of the hearing icon */
+		color: white; /* Set the color */
 	}
 	50% {
 		transform: scale(1.4); /* 20% larger */
 		opacity: 1; /* Full opacity */
-		color: #4caf50; /* Set the color of the hearing icon */
+		color: #4caf50; /* Set the color */
 	}
 	100% {
 		transform: scale(1); /* Back to normal size */
 		opacity: 0; /* Full opacity */
-		color: white; /* Set the color of the hearing icon */
+		color: white; /* Set the color */
 	}
 }
