--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,7 @@ h1 {
 
 input:checked + .slider {
 	background-color: #4caf50;
+	--hearing-color: #4caf50; /* Default color for hearing icon */
 }
 
 input:checked + .slider:before {
@@ -239,7 +240,7 @@ input:checked + .slider:before {
 	text-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
 	font-size: 40vh; /* Set the size of the hearing icon */
 	vertical-align: middle; /* Align the icon */
-	color: white; /* Set the color */
+	color: var(--hearing-color);
 }
 
 .center-wrapper {
@@ -251,9 +252,4 @@ input:checked + .slider:before {
 	width: 100%; /* Ensure the wrapper takes up full width */
 	height: 100%; /* Ensure the wrapper takes up full height */
 	padding-bottom: 20vh;
-}
-
-/* Change color when toggle is checked */
-#toggleSwitch:checked ~ #avatarCanvas .hearing-icon {
-	color: #0082fc; /* Change color based on toggle state */
 }
