--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ input:checked + .slider:before {
 	text-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
 	font-size: 40vh; /* Set the size of the hearing icon */
 	vertical-align: middle; /* Align the icon */
-	color: #0082fc; /* Default color */
+	color: #4caf50; /* Default color */
 }
 
 .center-wrapper {
