--- a/styles.css
+++ b/styles.css
@@ -60,10 +60,17 @@ h1 {
 	background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
 	color: white;
 	font-size: 9vw; /* Very big text size */
-	display: none; /* Initially hidden */
+	opacity: 0; /* Initially hidden */
+	visibility: hidden; /* Prevent interactions */
 	z-index: 9999; /* Ensure it appears above other content */
 	text-align: center; /* Center align the text */
 	padding-top: 0vh; /* Vertical padding to center the text */
+	transition: opacity 0.5s ease, visibility 0.5s ease; /* Smooth transitions */
+}
+
+#messageDisplayDiv.visible {
+	opacity: 1; /* Fully visible */
+	visibility: visible; /* Allow interactions */
 }
 
 .button {
