--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@ h1 {
 	justify-content: center;
 }
 
-#consoleOutput,
 #currentLocation {
 	width: 90%;
 	text-align: center;
@@ -40,6 +39,9 @@ h1 {
 }
 
 #consoleOutput {
+	width: 90%;
+	text-align: center;
+	color: #999da0; /* Black text color */
 	font-size: 14px; /* Text size */
 	font-family: "Courier New", Courier, monospace; /* Console */
 }
